fixed the alignment issues in design layout

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,14 +14,40 @@ html {
   font-size: 62.5%;
 }
 
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: row;
-  background: var(--body-background);
+main {
+  margin: 0 3rem;
+  margin-top: 5rem;
 }
 
-main {
+.container {
+  display: flex;
+  flex-direction: row;
+  background: var(--body-background);
+  width: 100%;
+  height: 100%;
+}
+
+.nav_block {
+  width: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content_block {
   width: 65%;
+}
+
+.cart_block {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo_block {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: row;
 }
