--- a/frontend/src/components/header/logo.css
+++ b/frontend/src/components/header/logo.css
@@ -13,6 +13,7 @@ html {
 .logo_container {
   display: flex;
   align-items: center;
+  margin-bottom: 5rem;
 }
 
 .logo_size {
@@ -21,7 +22,7 @@ html {
 }
 
 .company_name {
-  font-size: 3rem;
+  font-size: 5rem;
   font-weight: 600;
-  margin: 0 1rem;
+  margin: 0 2rem;
 }
